--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,8 @@ Imports:
   timetk,
   magrittr
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
