--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ apache-airflow==1.10.6
 apispec==3.1.1
 argcomplete==1.10.3
 attrs==19.3.0
+autopep8==1.4.4
 Babel==2.7.0
 cached-property==1.5.1
 certifi==2019.11.28
@@ -52,6 +53,7 @@ pandas==0.25.3
 pendulum==1.4.4
 prison==0.1.0
 psutil==5.6.7
+pycodestyle==2.5.0
 Pygments==2.5.2
 PyJWT==1.7.1
 pyrsistent==0.15.6
